# ffile_man

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  example.ipynb  example.py  pyproject.toml  script_test.py  test_script.py
.github/workflows/: python-package.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  manager.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  manager.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  manager.rst.txt
docs/source/: conf.py  index.rst  manager.rst  requirements.txt
ffile_man/: __init__.py
ffile_man/fits_file/: __init__.py  fits_file.py
ffile_man/manager/: manager.py
tests/: __init__.py  test_fits_file.py  test_manager.py
