[tool.poetry]
name = "ffile-man"
version = "0.1.0"
description = "FITS file manager"
authors = ["Bernardes, D. and Balaji T R"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
